    * 1065 heartbeat_crm / heartbeat_crm.resources: Rewrote checks / formalized parameters...
    * 0186 touchstone_cable_modem_fec: New Check to monitor the Forward error correction on touchstone cable modems
    * 1068 livedump: Added optional check interval (detect staleness) / option to encrypt mails...
    * 0188 touchstone_cable_modem_frequency: New check for line frequency in Mhz
    * 1051 FIX: tcp_conn_stats: fix missing performance data...
    * 1142 FIX: winperf_ts_sessions: fix computation, check has never really worked
    * 1090 FIX: zfsget: fixed exception which happened on incomplete zfs entries
    * 0187 FIX: hp_proliant_power: Fixed Wato configuration

    Multisite:
    * 1066 Implemented Dashboard Designer...
    * 1067 FIX: Fixed login problem in LDAP connector when no user filter specified...

    WATO:
    * 1064 FIX: Fixed rare issue with WATO communication in distributed setups (different OS versions)...
    * 1089 FIX: Snapshot restore: fixed exception during exception handling......
    * 1091 FIX: logwatch patterns: allow unicode text in pattern comment
    * 1092 FIX: logwatch: now able to enter unicode text into the "Pattern (Regex)" field


1.2.5i5:
    Core & Setup:
    * 1012 Fix quoting of backslashes in custom checks with nagios core...
            NOTE: Please refer to the migration notes!
    * 1038 Massive speedup of cmk --snmptranslate
    * 1035 FIX: Do not fail on errors in *.mk files anymore - except in interactive mode...
    * 0174 FIX: Fixed appending of --keepalive-fd parameters to checkhelpers...
    * 1053 FIX: Fixed events check always being reporting OK state...
    * 1045 FIX: Gracefully restart check_mk helpers in case of memory leak...
    * 0633 FIX: diskstat: fixed performance data of old legacy disk IO read/write data...

    Checks & Agents:
    * 0168 f5_bigip_pool: Added Wato configuration...
    * 0995 raritan_pdu_outletcount: new check for outlet count of Raritan PX-2000 family PDUs