@@ -1,14 +1,0 @@
-title: DOCSIS: Frequency
-agents: snmp
-catalog: hw/network/arris
-license: GPL
-distribution:
-description:
- This check monitors the frequency on the modem line in Mhz. Levels for {WARN} and {CRIT} can be set.
-
-item:
- None
-
-inventory:
- One service will be created
-
