@@ -24,32 +24,53 @@
 # to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
 # Boston, MA 02110-1301 USA.
 
-docsis_channels_default_levels = ( 155, 163 )
-
-def inventory_docsis_channels(info):
-    return [ (None, "docsis_channels_default_levels") ]
-
-def check_docsis_channels(_no_item, params, info):
-    mhz = int(info[0][0]) / 1000000
-    infotext = "Current Frequence is %d Mhz" % mhz
-    warn, crit = params
-    perfdata = [("frequence" , mhz, warn, crit )]
-    levels = " (Levels Warn/Crit at %d Mhz/ %d Mhz)" % ( warn, crit )
-    state = 0
-    if mhz >= crit:
-        state = 2
-        infotext += levels
-    elif mhz >= warn:
-        state  = 1
-        infotext += levels
-    return state, infotext, perfdata
-
-check_info["docsis_channels"] = {
-    "check_function"          : check_docsis_channels,
-    "inventory_function"      : inventory_docsis_channels,
-    "service_description"     : "Frequency",
-    "snmp_scan_function"      : lambda oid: oid(".1.3.6.1.2.1.1.2.0") == ".1.3.6.1.4.1.4115.820.1.0.0.0.0.0",
-    "snmp_info"               : ( ".1.3.6.1.2.1.10.127.1.1.1.1.2", [ 3 ]),
-    "group"                   : "docsis_channels",
+factory_settings["docsis_channels_downstream"] = {
+    "frequency":           ( 155 , 163 ), 
 }
 
+def inventory_docsis_channels_downstream(info):
+    for line in info:
+        if line[1] != '0':
+            yield line[0], {}
+
+def check_docsis_channels_downstream( item, params, info):
+    for channel_id, frequency in info:
+        if channel_id == item:
+            frequency_mhz = int(frequency) / 1000000
+            # Check Frequency
+            infotext = "Current Frequence is %d Mhz" % frequency_mhz
+            warn, crit = params["frequency"]
+            perfdata = [("frequence" , frequency_mhz, warn, crit )]
+            levels = " (Levels Warn/Crit at %d Mhz/ %d Mhz)" % ( warn, crit )
+            state = 0
+            if frequency_mhz >= crit:
+                state = 2
+                infotext += levels
+            elif frequency_mhz >= warn:
+                state  = 1
+                infotext += levels
+            # Change this to yield in case of future extension of the check
+            return state, infotext, perfdata
+
+# This Check is a subcheck because there is also a upstream version possible 
+check_info["docsis_channels.downstream"] = {
+    "check_function"          : check_docsis_channels_downstream,
+    "inventory_function"      : inventory_docsis_channels_downstream,
+    "service_description"     : "Channel Downstream %s",
+    "snmp_scan_function"      : lambda oid: oid(".1.3.6.1.2.1.1.2.0") in [ ".1.3.6.1.4.1.4115.820.1.0.0.0.0.0",
+                                ".1.3.6.1.4.1.9.1.827" ],
+    "snmp_info"               : ( ".1.3.6.1.2.1.10.127.1.1.1.1", [  1, # Channel ID
+                                                                    2, # Frequency 
+                                                                    ]),
+    "group"                   : "docsis_channels_downstream",
+    "default_levels_variable" : "docsis_channels_downstream",
+}
+
+# Information for future extensions of the check:
+# docsIfDownChannelId             1.3.6.1.2.1.10.127.1.1.1.1.1 
+# docsIfDownChannelFrequency      1.3.6.1.2.1.10.127.1.1.1.1.2 
+# docsIfDownChannelWidth          1.3.6.1.2.1.10.127.1.1.1.1.3 
+# docsIfDownChannelModulation     1.3.6.1.2.1.10.127.1.1.1.1.4 
+# docsIfDownChannelInterleave     1.3.6.1.2.1.10.127.1.1.1.1.5 
+# docsIfDownChannelPower          1.3.6.1.2.1.10.127.1.1.1.1.6 
+# docsIfDownChannelAnnex          1.3.6.1.2.1.10.127.1.1.1.1.7
