@@ -5,6 +5,7 @@
     * 0186 touchstone_cable_modem_fec: New Check to monitor the Forward error correction on touchstone cable modems
     * 1068 livedump: Added optional check interval (detect staleness) / option to encrypt mails...
     * 0188 touchstone_cable_modem_frequency: New check for line frequency in Mhz
+    * 0189 docsis_channels: Support for Frequency of Downstream Channels for Devices with DOCSIS MIB
     * 1051 FIX: tcp_conn_stats: fix missing performance data...
     * 1142 FIX: winperf_ts_sessions: fix computation, check has never really worked
     * 1090 FIX: zfsget: fixed exception which happened on incomplete zfs entries
